# ppe-detection

./: NanoDet-Plus.ipynb  PP-YOLOE-S.ipynb  README.md  YOLOv11n.ipynb  YOLOv8n.ipynb  main.py  ppe.yaml  pyproject.toml  remap_labels.py  split_dataset.py
results/: args.yaml  results.csv
scripts/: camera_service.py
tools/: split_dataset.py  test_video.py
