[project]
name = "ppe-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cuda-python>=13.0.1",
    "numpy==1.26.4",
    "tensorrt==10.12.0.36",
    "tensorrt-cu12-libs==10.12.0.36",
    "tensorrt-cu12-bindings==10.12.0.36",
    "torch>=2.8.0",
    "torchvision>=0.15.2",
    "transformers>=4.56.1",
    "ultralytics>=8.3.14",
]
